Bug 192577 - URL bar doesn't collapse on windows Patch by aaronl@netscape.com r=danm sr=bryner a=asa for checkin into a closed tree